<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alivc_voicecall_rl_login_layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alivc_biginteractiveclass_color_text_white">

    <ImageView
        android:id="@+id/alivc_big_interactive_class_iv_back"
        android:layout_width="@dimen/alivc_biginteractiveclass_height_titlebar_24"
        android:layout_height="@dimen/alivc_biginteractiveclass_height_titlebar_24"
        android:layout_marginLeft="@dimen/alivc_biginteractiveclass_padding_20"
        android:layout_marginTop="@dimen/alivc_biginteractiveclass_margin_36"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/alirtc_audioliveroom_iv_logo_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/alivc_biginteractiveclass_bg_logo_icon"
        android:scaleType="centerInside" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/alivc_biginteractiveclass_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alivc_biginteractiveclass_string_welcome"
            android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
            android:textSize="@dimen/alivc_biginteractiveclass_size_text__32" />

        <TextView
            android:id="@+id/alivc_biginteractiveclass_tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alivc_biginteractiveclass_tv_title"
            android:layout_marginTop="@dimen/alivc_common_margin_4"
            android:text="@string/alivc_biginteractiveclass_string_provide_services"
            android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
            android:textSize="@dimen/alivc_common_font_11" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/alivc_biginteractiveclass_textinputlayout_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/alivc_biginteractiveclass_tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_width_imageview_107"
            app:hintTextAppearance="@style/hintTextAppearance">

            <EditText
                android:id="@+id/alivc_biginteractiveclassl_edittext_student_name"
                android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
                android:layout_height="@dimen/alivc_biginteractiveclass_width_selector_40"
                android:background="@null"
                android:hint="@string/alivc_biginteractiveclass_string_hint_student_name"
                android:maxLines="1"
                android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
                android:textSize="@dimen/alivc_biginteractiveclass_size_text_14"
                android:theme="@style/hintTextAppearance" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
            android:layout_height="@dimen/alivc_biginteractiveclass_line_1px"
            android:layout_below="@id/alivc_biginteractiveclass_textinputlayout_student_name"
            android:layout_centerHorizontal="true"
            android:background="@color/alivc_biginteractiveclass_color_text_gray" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/alivc_biginteractiveclass_textinputlayout_channelid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/alivc_biginteractiveclass_textinputlayout_student_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_margin_26"
            app:hintTextAppearance="@style/hintTextAppearance">

            <com.aliyun.rtc.alivcrtcviewcommon.view.ChannelEditView
                android:id="@+id/alivc_biginteractiveclass_edittext_channelid"
                android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
                android:layout_height="@dimen/alivc_biginteractiveclass_width_selector_40"
                android:hint="@string/alivc_biginteractiveclass_string_hint_room_num"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
                android:textSize="@dimen/alivc_biginteractiveclass_size_text_14"
                android:theme="@style/hintTextAppearance" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/alivc_voicecall_tv_begin_speak"
            android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
            android:layout_height="@dimen/alivc_biginteractiveclass_height_tv_48"
            android:layout_below="@id/alivc_biginteractiveclass_textinputlayout_channelid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_margin_75"
            android:background="@drawable/alivc_biginteractiveclass_btn_bg_selector"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/alivc_biginteractiveclass_string_btn_start_voice_call"
            android:textColor="@color/alivc_biginteractiveclass_color_text_white"
            android:textSize="@dimen/alivc_biginteractiveclass_size_text_18" />

        <TextView
            android:id="@+id/alivc_biginteractiveclass_tv_rtc_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alivc_voicecall_tv_begin_speak"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/alivc_biginteractiveclass_rtc_version_str"
            android:textColor="@color/alivc_biginteractiveclass_color_haft_version_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/alivc_biginteractiveclass_tv_im_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alivc_biginteractiveclass_tv_rtc_version"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/alivc_biginteractiveclass_im_version_str"
            android:textColor="@color/alivc_biginteractiveclass_color_haft_version_dark"
            android:textSize="12sp" />
    </RelativeLayout>
</RelativeLayout>
